--- a/Bookin_Appointment.html
+++ b/Bookin_Appointment.html
@@ -52,7 +52,7 @@
   <div class="mt-3 mb-3">
   <label for ="GET A CALL" class="fw-bold text-dark">GET A CALL</label>
   <input type="submit" id="GET A CALL" class="btn btn-dark" name="GET A CALL">
-  <ul id="list" calss="list-group "></ul>
+  <ul id="list" class="list-group "></ul>
   </div>
 </form>
   </div>
