--- a/Bookin_Appointment.html
+++ b/Bookin_Appointment.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
   <title>REGISTRATION FORM</title>
 </head>
 <body>
@@ -39,7 +40,7 @@
     </label>
   </div>
    -->
-  <div class="form-check mb-3">
+  <!-- <div class="form-check mb-3">
       <label class="form-check-label" class="fw-bold text-dark">
         <input class="form-check-input" type="checkbox" name="remember"> Remember me
       </label>
@@ -48,7 +49,7 @@
     <label for="TIME" class="fw-bold text-dark">TIME FOR CALL</label>
   <input type="DATE" id="TIME" name="TIME">
   <input type="Time" id="TIME" name="TIME" placeholder="11:00"><br>
-  </div>
+  </div> -->
   <div class="mt-3 mb-3">
   <label for ="GET A CALL" class="fw-bold text-dark">GET A CALL</label>
   <input type="submit" id="GET A CALL" class="btn btn-dark" name="GET A CALL">
@@ -57,6 +58,79 @@
 </form>
   </div>
   
-  <script src="booking.js"></script>
+  <script>
+    const form=document.getElementById('addForm');
+form.addEventListener('submit',addItem);
+
+function addItem(e)
+{
+  
+  e.preventDefault();
+  const fname=document.getElementById('fname').value;
+  const Email=document.getElementById('Email').value;
+  const PHNO=document.getElementById('PHNO').value;
+  // localStorage.setItem('fname',fname);
+  // localStorage.setItem('Email',Email);
+  // localStorage.setItem('PHNO',PHNO);
+  const details =
+  {
+    fname:fname,
+    Email:Email,
+    PHNO:PHNO
+
+  }
+  axios.post("https://crudcrud.com/api/878ff7195ebe4bfd958677a3117dabe7/appointmentData",details)
+  .then(res=>{
+    showuser(res.data)
+    console.log(res)
+  })
+  .catch(err=>{
+      document.body.innerHTML=`<li>Something went wrong</li>`
+    console.error(err)
+  })
+// localStorage.setItem(details.Email,JSON.stringify(details));
+  
+}
+
+function showuser(user)
+{
+  const parentNode=document.getElementById('list');
+  
+ 
+  const childHTML= `<li id= ${user.Email}>${user.fname} - ${user.Email}
+              <button onclick=editUser('${user.Email}','${user.fname}','${user.PHNO}') class="btn btn-dark text-white btn-sm float-right">Edit</button>
+              <button onclick=deleteUser('${user.Email}') class="btn btn-danger text-white btn-sm float-right"> delete</button>
+                                      </li>`;// we can call click like this also
+  parentNode.innerHTML=parentNode.innerHTML+childHTML;
+  
+}
+
+function deleteUser(Email)
+{
+  localStorage.removeItem(Email);
+  removeUSerFromScreen(Email);
+}
+
+function removeUSerFromScreen(Email)
+{
+
+  const parentNode=document.getElementById('list');
+  const child=document.getElementById(Email);
+  parentNode.removeChild(child);
+}
+
+function editUser(Email,fname,PHNO)
+{
+
+  document.getElementById('fname').value=fname;
+  document.getElementById('Email').value=Email;
+  document.getElementById('PHNO').value=PHNO;
+
+  deleteUser(Email);
+
+
+}
+
+  </script>
 </body>
 </html>
