--- a/cruddelete.html
+++ b/cruddelete.html
@@ -4,38 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Document</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
-  <title>REGISTRATION FORM</title>
 </head>
 <body>
-  <div class="container-sm card card-body mt-3 bg-info text-white ">
-  <h1 class="text-center fw-bold text-dark "> BOOKING A APPOINTMENT</h1>
-  <hr>
-  <form id="add-form" class="form-inline mb-3">
-    <div class="mb-3 mt-3">
-  <label for="fname" class="fw-bold text-dark">First Name</label><br>
-  <input type="text" id="name" class="form-control" name="fname" placeholder="Enter Name"><br>
-</div>
-<div class="mt-3 mb-3">
-  <label for="Email" class="fw-bold text-dark">EMAIL</label><br>
-  <input type="email" id="email" class="form-control" placeholder="example@gmail.com" name="Email" > <br>
-  </div>
-  <div class="mt-3 mb-3">
-    <label for="PHNO" class="fw-bold text-dark">PHNO</label><br>
-  <input type="text" id="phno" class="form-control"  name="PHNO" > <br>
-  </div>
-  <div class="mt-3 mb-3">
-  <label for ="GET A CALL" class="fw-bold text-dark">GET A CALL</label>
-  <input type="submit" id="GET A CALL" class="btn btn-dark" name="GET A CALL">
-  <ul id="listofList" class="list-group "></ul>
-  </div>
+  <form id="add-form">
+    <label> Name</label>
+    <input type="text" id="name" name="username"  required/>
+    <label> EmailId</label>
+    <input type="email" id="email"name="emailId"  required/>
+    <label> Phone Number</label>
+    <input type="tel" id="phno" name="phonenumber" />
+    <button> Submit </button>
 </form>
-  </div>
-  
-  <script>
-    
+<ul id='listOfUsers'></ul>
+<script>
     const Form= document.getElementById('add-form');
     Form.addEventListener('submit',addItem);
 
